Split the downloading functionality into a separate command
- introduced new 'download' command for downloading the images
- this change is to support future functionality not connected directly to downloading
- also added extensive tests for command line processing